--- a/css/main.css
+++ b/css/main.css
@@ -4,7 +4,7 @@
     padding: 0;
 }
 body{
-    font-style: 'Roboto', 'Arial', sans-serif;
+    font-family: 'Roboto', 'Arial', sans-serif;
 }
 header{
     background-color: #F2F2F2;;
